--- a/public/css/create-category.css
+++ b/public/css/create-category.css
@@ -11,6 +11,12 @@
     font-weight: bold;
 }
 
+.autocomplete-item-salt{
+    color: #8f8f8f;
+    font-size: 10px;
+    margin: 0px;
+}
+
 .autocomplete-items{
     background-color: #cccccc;
     margin-top: 1px;
@@ -18,6 +24,8 @@
 .autocomplete-item{
     background-color: white;
     margin-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 .autocomplete-item:hover{
     background-color: aquamarine;
