--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -42,6 +42,16 @@ input[type=text], select {
     box-sizing: border-box;
 }
 
+#pwd{
+    width: 100%;
+    padding: 10px 10px;
+    margin:  0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 h2{
     text-align: center;
     color: blue;
